#Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#1271] The DNS library is now using ECS code (edns-client-subnet)
  compliant with RFC 7871 [John Bond]

o [Ncat][GH#1267] Fixed communication with commands launched with -e or -c on
  Windows, especially when --ssl is used. [Daniel Miller]

o Upgraded included libpcap to 1.8.1 [Daniel Miller]

o [NSE] Script http-default-accounts was not able to run against more than one
  target host/port. [nnposter]

o [NSE][GH#1251] New script-arg `http.host` allows users to force a particular
  value for the Host header in all HTTP requests.

o [NSE][GH#1258] Use smtp.domain script arg or target's domain name instead of
  "example.com" in EHLO command used for STARTTLS. [gwire]

o [NSE][GH#1233] Fix brute.lua's BruteSocket wrapper, which was crashing Nmap
  with an assertion failure due to socket mixup [Daniel Miller]:
    nmap: nse_nsock.cc:672: int receive_buf(lua_State*, int, lua_KContext): Assertion `lua_gettop(L) == 7' failed.

o [NSE][GH#1254] Handle an error condition in smb-vuln-ms17-010 caused by IPS
  closing the connection. [Clément Notin]

o [NSE] https-redirect detects HTTP servers that redirect to the same port, but
  with HTTPS. Some nginx servers do this, which made ssl-* scripts not run
  properly. [Daniel Miller]

o [NSE][GH#1236] Added broadcast-jenkins-discover to discover Jenkins servers
  on a LAN by sending a discovery broadcast probe. [Brendan Coles]

o [NSE][GH#1232] Added broadcast-hid-discoveryd to discover HID devices
  on a LAN by sending a discoveryd network broadcast probe. [Brendan Coles]

o New service probe and match lines for adb, the Android Debug Bridge, which
  allows remote code execution and is left enabled by default on many devices.
  [Daniel Miller]

o [Ncat][GH#1237] Fixed literal IPv6 URL format for connecting through
  HTTP proxies. [Phil Dibowitz]

o [NSE][GH#1212] Updates vendors from ODVA list for enip-info. [NothinRandom]
