@@ -1,7 +1,10 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
-o [NSE][GH#1271] The DNS library is now using ECS code (edns-client-subnet)
-  compliant with RFC 7871 [John Bond]
+o [NSE] Support for edns-client-subnet (ECS) in dns.lua has been improved by:
+  - Using ECS code compliant with RFC 7871 [John Bond]
+  - Properly trimming ECS address, as mandated by RFC 7871 [nnposter]
+  - Fixing a bug that prevented using the same ECS option table more than
+    once [nnposter]
 
 o [Ncat][GH#1267] Fixed communication with commands launched with -e or -c on
   Windows, especially when --ssl is used. [Daniel Miller]
